# claude-container-template

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
